@@ -19,8 +19,8 @@ import er.extensions.foundation.ERXProperties;
  */
 public class ERCloudFilesAttachment extends _ERCloudFilesAttachment {
   @SuppressWarnings("unused")
-  public static final String STORAGE_TYPE = "cf";
   private static Logger log = Logger.getLogger(ERCloudFilesAttachment.class);
+  public static final String STORAGE_TYPE = "cf";
 
   private File _pendingUploadFile;
   private boolean _pendingDelete;
@@ -103,7 +103,7 @@ public class ERCloudFilesAttachment extends _ERCloudFilesAttachment {
     if (connectionTimeOut == null) {
       connectionTimeOut = ERXProperties.decryptedStringForKeyWithDefault("er.attachment.cf.connectionTimeOut", "5000");
     }
-    return new Integer(connectionTimeOut);
+    return Integer.valueOf(connectionTimeOut);
   }
   
   public String acl() {
