@@ -31,6 +31,8 @@ import java.util.Map;
 import java.util.StringTokenizer;
 import java.util.Vector;
 
+import org.apache.commons.lang.CharEncoding;
+import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 
 import com.webobjects.appserver.WOApplication;
@@ -55,6 +57,7 @@ import com.webobjects.foundation.NSTimestamp;
 
 import er.extensions.appserver.ERXMessageEncoding;
 import er.extensions.eof.ERXConstant;
+import er.extensions.formatters.ERXSimpleHTMLFormatter;
 
 /**
  * Collection of {@link java.lang.String String} utilities. Contains
@@ -82,106 +85,136 @@ public class ERXStringUtilities {
      * a single entry for English.
      */
     private static NSArray _defaultTargetDisplayLanguages = new NSArray(DEFAULT_TARGET_DISPLAY_LANGUAGE);
-    
-    /**
-     * Java port of the distance algorithm.
-     *
-     * The code below comes from the following post on http://mail.python.org
-     * Fuzzy string matching
-     *   Magnus L. Hetland mlh@idt.ntnu.no
-     *   27 Aug 1999 15:51:03 +0200
-     *
-     *  Explanation of the distance algorithm...
-     *
-     *  The algorithm:
-     *
-     *  def distance(a,b):
-     *   c = {}
-     *  n = len(a); m = len(b)
-     *
-     *  for i in range(0,n+1):
-     *  c[i,0] = i
-     *  for j in range(0,m+1):
-     *  c[0,j] = j
-     *
-     *  for i in range(1,n+1):
-     *  for j in range(1,m+1):
-     *  x = c[i-1,j]+1
-     *  y = c[i,j-1]+1
-     *  if a[i-1] == b[j-1]:
-     *    z = c[i-1,j-1]
-     *  else:
-     *    z = c[i-1,j-1]+1
-     *  c[i,j] = min(x,y,z)
-     *  return c[n,m]
-     *
-     *  It calculates the following: Given two strings, a and b, and three
-     *  operations, adding, subtracting and exchanging single characters, what
-     *  is the minimal number of steps needed to translate a into b?
-     *
-     *  The method is based on the following idea:
-     *
-     *  We want to find the distance between a[:x] and b[:y]. To do this, we
-     *  first calculate
-     *
-     *  1) the distance between a[:x-1] and b[:y], adding the cost of a
-     *  subtract-operation, used to get from a[:x] to a[:z-1];
-     *
-     *  2) the distance between a[:x] and b[:y-1], adding the cost of an
-     *  addition-operation, used to get from b[:y-1] to b[:y];
-     *
-     *  3) the distance between a[:x-1] and b[:y-1], adding the cost of a
-     *  *possible* exchange of the letter b[y] (with a[x]).
-     *
-     *  The cost of the subtraction and addition operations are 1, while the
-     *  exchange operation has a cost of 1 if a[x] and b[y] are different, and
-     *  0 otherwise.
-     *
-     *  After calculating these costs, we choose the least one of them
-     * (since we want to use the best solution.)
-     *
-     *  Instead of doing this recursively, i.e. calculating ourselves "back"
-     *  from the final value, we build a cost-matrix c containing the optimal
-     *  costs, so we can reuse them when calculating the later values. The
-     *  costs c[i,0] (from string of length n to empty string) are all i, and
-     *  correspondingly all c[0,j] (from empty string to string of length j)
-     *  are j.
-     *
-     *  Finally, the cost of translating between the full strings a and b
-     *  (c[n,m]) is returned.
-     *
-     *  I guess that ought to cover it...
-     * --------------------------
-     * @param a first string
-     * @param b second string
-     * @return the distance between the two strings
-     */
+
+	/**
+	 * Returns the <a
+	 * href="http://en.wikipedia.org/wiki/Levenshtein_distance">Levenshtein
+	 * distance</a> between {@code a} and {@code b} as a {@code double}. (This
+	 * method is being retained for backwards compatibility, and will be removed
+	 * at some future point. New code should use
+	 * {@link #levenshteinDistance(String, String)}.)
+	 * 
+	 * @param a
+	 *            first string
+	 * @param b
+	 *            second string
+	 * @return Levenshtein distance between {@code a} and {@code b}
+	 * @deprecated Use {@link #levenshteinDistance(String, String)}, which
+	 *             correctly returns an {@code int} result
+	 */
+    @Deprecated
     public static double distance(String a, String b) {
-        int n = a.length();
-        int m = b.length();
-        int c[][] = new int[n+1][m+1];
-        for(int i = 0; i<=n; i++){
-            c[i][0] = i;
-        }
-        for(int j = 0; j<=m; j++){
-            c[0][j] = j;
-        }
-        for(int i = 1; i<=n; i++){
-            for(int j = 1; j<=m; j++){
-                int x = c[i-1][j] + 1;
-                int y = c[i][j-1] + 1;
-                int z = 0;
-                if(a.charAt(i-1) == b.charAt(j-1))
-                    z = c[i-1][j-1];
-                else
-                    z = c[i-1][j-1] + 1;
-                int temp = Math.min(x,y);
-                c[i][j] = Math.min(z, temp);
-            }
-        }
-        return c[n][m];
+    	return levenshteinDistance(a, b);
     }
 
+	/**
+	 * <p>
+	 * Returns the <a
+	 * href="http://en.wikipedia.org/wiki/Levenshtein_distance">Levenshtein
+	 * distance</a> between {@code a} and {@code b}. This code is based on <a
+	 * href
+	 * ="http://mail.python.org/pipermail/python-list/1999-August/006031.html"
+	 * >some Python code posted to a mailing list</a> by Magnus L. Hetland
+	 * &lt;mlh@idt.ntnu.no&gt;, and assumed to be in the public domain.
+	 * </p>
+	 * 
+	 * <h3>Algorithm</h3>
+	 * 
+	 * <pre>
+	 * <code>def distance(a,b):
+	 *   c = {}
+	 *   n = len(a); m = len(b)
+	 * 
+	 *   for i in range(0,n+1):
+	 *     c[i,0] = i
+	 *   for j in range(0,m+1):
+	 *     c[0,j] = j
+	 * 
+	 *   for i in range(1,n+1):
+	 *     for j in range(1,m+1):
+	 *       x = c[i-1,j]+1
+	 *       y = c[i,j-1]+1
+	 *       if a[i-1] == b[j-1]:
+	 *         z = c[i-1,j-1]
+	 *       else:
+	 *         z = c[i-1,j-1]+1
+	 *       c[i,j] = min(x,y,z)
+	 *   return c[n,m]</code>
+	 * </pre>
+	 * 
+	 * <p>
+	 * It calculates the following: Given two strings, {@code a} and {@code b},
+	 * and three operations, adding, subtracting and exchanging single
+	 * characters, what is the minimal number of steps needed to translate
+	 * {@code a} into {@code b}? The method is based on the following idea. We
+	 * want to find the distance between {@code a[:x]} and {@code b[:y]}. To do
+	 * this, we first calculate:
+	 * </p>
+	 * 
+	 * <ol>
+	 * <li>the distance between {@code a[:x-1]} and {@code b[:y]}, adding the
+	 * cost of a subtract-operation, used to get from {@code a[:x]} to
+	 * {@code a[:z-1]};</li>
+	 * <li>the distance between {@code a[:x]} and {@code b[:y-1]}, adding the
+	 * cost of an addition-operation, used to get from {@code b[:y-1]} to
+	 * {@code b[:y]};</li>
+	 * <li>the distance between {@code a[:x-1]} and {@code b[:y-1]}, adding the
+	 * cost of a <em>possible</em> exchange of the letter {@code b[y]} (with
+	 * {@code a[x]}).</li>
+	 * </ol>
+	 * 
+	 * <p>
+	 * The cost of the subtraction and addition operations are 1, while the
+	 * exchange operation has a cost of 1 if {@code a[x]} and {@code b[y]} are
+	 * different, and 0 otherwise. After calculating these costs, we choose the
+	 * least one of them (since we want to use the best solution.)
+	 * </p>
+	 * 
+	 * <p>
+	 * Instead of doing this recursively, i.e. calculating ourselves "back" from
+	 * the final value, we build a cost-matrix {@code c} containing the optimal
+	 * costs, so we can reuse them when calculating the later values. The costs
+	 * {@code c[i,0]} (from string of length {@code n} to empty string) are all
+	 * {@code i}, and correspondingly all {@code c[0,j]} (from empty string to
+	 * string of length {@code j}) are {@code j}. Finally, the cost of
+	 * translating between the full strings {@code a} and {@code b} (
+	 * {@code c[n,m]}) is returned.
+	 * </p>
+	 * 
+	 * @param a
+	 *            first string
+	 * @param b
+	 *            second string
+	 * @return the distance between the two strings
+	 * @deprecated use {@link StringUtils#getLevenshteinDistance(String, String)} instead
+	 */
+	@Deprecated
+	public static int levenshteinDistance(String a, String b) {
+		int n = a.length();
+		int m = b.length();
+		int c[][] = new int[n + 1][m + 1];
+		for (int i = 0; i <= n; i++) {
+			c[i][0] = i;
+		}
+		for (int j = 0; j <= m; j++) {
+			c[0][j] = j;
+		}
+		for (int i = 1; i <= n; i++) {
+			for (int j = 1; j <= m; j++) {
+				int x = c[i - 1][j] + 1;
+				int y = c[i][j - 1] + 1;
+				int z = 0;
+				if (a.charAt(i - 1) == b.charAt(j - 1))
+					z = c[i - 1][j - 1];
+				else
+					z = c[i - 1][j - 1] + 1;
+				int temp = Math.min(x, y);
+				c[i][j] = Math.min(z, temp);
+			}
+		}
+		return c[n][m];
+	}
+    
     /** holds the base adjustment for fuzzy matching */
     // FIXME: Not thread safe
     // MOVEME: Needs to go with the fuzzy matching stuff
@@ -249,11 +282,11 @@ public class ERXStringUtilities {
             if( value!=null && value instanceof String){
                 String comparedString = ((String)value).toUpperCase();
                 String cleanedComparedString = cleaner.cleanStringForFuzzyMatching(comparedString);
-                if( (distance(name, comparedString) <=
+                if( (levenshteinDistance(name, comparedString) <=
                      Math.min((double)name.length(), (double)comparedString.length())*adjustement ) ||
-                    (distance(cleanedName, cleanedComparedString) <=
+                    (levenshteinDistance(cleanedName, cleanedComparedString) <=
                      Math.min((double)cleanedName.length(), (double)cleanedComparedString.length())*adjustement)){
-                    dico.setObjectForKey( new Double(distance(name, comparedString)), _DISTANCE );
+                    dico.setObjectForKey( Double.valueOf(levenshteinDistance(name, comparedString)), _DISTANCE );
                     NSDictionary<String, Object> pkValues = new NSDictionary<String, Object>(dico.objectsForKeys(pks, NSKeyValueCoding.NullValue ), pks);
                     dico.setObjectForKey( EOUtilities.faultWithPrimaryKey( ec, entityName, pkValues ), eoKey );
                     results.addObject( dico );
@@ -268,11 +301,11 @@ public class ERXStringUtilities {
                     Vector v = (Vector)plist;
                     for(int i = 0; i< v.size(); i++){
                         String comparedString = ((String)v.elementAt(i)).toUpperCase();
-                        if((distance(name, comparedString) <=
+                        if((levenshteinDistance(name, comparedString) <=
                             Math.min((double)name.length(), (double)comparedString.length())*adjustement) ||
-                           (distance(cleanedName, comparedString) <=
+                           (levenshteinDistance(cleanedName, comparedString) <=
                             Math.min((double)cleanedName.length(), (double)comparedString.length())*adjustement)){
-                            dico.setObjectForKey( new Double(distance(name, comparedString)), _DISTANCE );
+                            dico.setObjectForKey( Double.valueOf(levenshteinDistance(name, comparedString)), _DISTANCE );
                             NSDictionary<String, Object> pkValues = new NSDictionary<String, Object>(dico.objectsForKeys(pks, NSKeyValueCoding.NullValue ), pks);
                             dico.setObjectForKey( EOUtilities.faultWithPrimaryKey( ec, entityName, pkValues ), eoKey );
                             results.addObject( dico );
@@ -285,7 +318,7 @@ public class ERXStringUtilities {
         if( sortOrderings != null ) {
             results = (NSMutableArray<NSMutableDictionary<String, Object>>) EOSortOrdering.sortedArrayUsingKeyOrderArray(results, sortOrderings);
         }
-        return (NSArray) results.valueForKey( eoKey );        
+        return (NSArray) results.valueForKey( eoKey );
     }
     
     /**
@@ -411,7 +444,7 @@ public class ERXStringUtilities {
      * @param s string to caclulate an Integer from
      * @return parsed Integer from the string or null
      *		if the string is not correctly formed.
-     * @see ERXConstant#integerForString(String)
+     * @see er.extensions.eof.ERXConstant#integerForString(String)
      */
     public static Integer integerWithString(String s) {
         try {
@@ -655,7 +688,9 @@ public class ERXStringUtilities {
      * @param newString to be inserted
      * @param buffer string to have the replacement done on it
      * @return string after having all of the replacement done.
+     * @deprecated use {@link StringUtils#replace(String, String, String)} instead
      */
+    @Deprecated
     public static String replaceStringByStringInString(String old, String newString, String buffer) {
         int begin, end;
         int oldLength = old.length();
@@ -690,7 +725,9 @@ public class ERXStringUtilities {
      * @param replacementString the string with which to replace stringToReplace.
      * @return sourceString with stringToReplace replaced with replacementString if it
      *         existed in sourceString.  otherwise, sourceString is returned.
+     * @deprecated use {@link StringUtils#replaceOnce(String, String, String)} instead
      */
+    @Deprecated
     public static String stringByReplacingFirstOccurrenceOfStringWithString(final String sourceString, final String stringToReplace, final String replacementString) {
         final int indexOfMatch = sourceString.indexOf(stringToReplace);
         final String result;
@@ -753,18 +790,17 @@ public class ERXStringUtilities {
 
         // If the string has no different char, then return the string as is,
         // otherwise create a lowercase version in a char array.
-        if (different == -1)
+        if (different == -1) {
             return str;
-        else {
-            char[] chars = new char[len];
-            str.getChars(0, len, chars, 0);
-            // (Note we start at different, not at len.)
-            for(int j = different; j >= 0; j--) {
-                chars[j] = Character.toLowerCase(chars[j]);
-            }
-
-            return new String(chars);
         }
+        char[] chars = new char[len];
+        str.getChars(0, len, chars, 0);
+        // (Note we start at different, not at len.)
+        for(int j = different; j >= 0; j--) {
+            chars[j] = Character.toLowerCase(chars[j]);
+        }
+
+        return new String(chars);
     }
 
     /**
@@ -1071,7 +1107,7 @@ public class ERXStringUtilities {
 
     public static String toHexString(char c) {
     	StringBuilder result = new StringBuilder("\u005C\u005Cu9999".length());
-        String u = Long.toHexString((int) c).toUpperCase();
+        String u = Long.toHexString(c).toUpperCase();
         switch (u.length()) {
             case 1:   result.append("\u005C\u005Cu000");  break;
             case 2:   result.append("\u005C\u005Cu00");   break;
@@ -1161,8 +1197,7 @@ public class ERXStringUtilities {
     public static String removeExtraDotsFromVersionString(String version) {
         int floatingPointIndex = version.indexOf("."); 
         if (floatingPointIndex >= 0  &&  floatingPointIndex + 1 < version.length()) {
-            String minorVersion = ERXStringUtilities.replaceStringByStringInString(".", "", 
-                                        version.substring(floatingPointIndex + 1));
+            String minorVersion = StringUtils.replace(version.substring(floatingPointIndex + 1), ".", "");
             version = version.substring(0, floatingPointIndex + 1) + minorVersion;
         }
         return version;
@@ -1696,7 +1731,7 @@ public class ERXStringUtilities {
 	else {
 	  	try {
 	  		if(encoding == null) {
-	  			encoding = "UTF-8";
+	  			encoding = CharEncoding.UTF_8;
 	  		}
 			bytes = ERXFileUtilities.md5(new ByteArrayInputStream(str.getBytes(encoding)));
 		}
@@ -2091,7 +2126,7 @@ public class ERXStringUtilities {
      * @param string string to convert
      */
     public static byte[] toUTF8Bytes(String string) {
-    	return toBytes(string, "UTF-8");
+    	return toBytes(string, CharEncoding.UTF_8);
     }
 
     /**
@@ -2117,7 +2152,7 @@ public class ERXStringUtilities {
      * @param bytes string to convert
      */
     public static String fromUTF8Bytes(byte bytes[]) {
-    	return fromBytes(bytes, "UTF-8");
+    	return fromBytes(bytes, CharEncoding.UTF_8);
     }
 
     /**
@@ -2326,10 +2361,78 @@ public class ERXStringUtilities {
 				stripped = stripped.replaceAll("&#8482;", "(TM)");
 			stripped = stripped.trim();
 			}
- 		}
- 		return stripped;
- 	}
-
+		}
+		return stripped;
+	}
+	
+    /**
+     * Removes all of the HTML tags from a given string.
+     * Note: this is a very simplistic implementation
+     * and will most likely not work with complex HTML.
+     * Note: for actual conversion of HTML tags into regular
+     * strings have a look at {@link ERXSimpleHTMLFormatter}
+     * @param s html string
+     * @return string with all of its html tags removed
+     */
+    // FIXME: this is so simplistic it will break if you sneeze
+    public static String removeHTMLTagsFromString(String s) {
+        StringBuffer result=new StringBuffer();
+        if (s != null && s.length()>0) {
+            int position=0;
+            while (position<s.length()) {
+                int indexOfOpeningTag=s.indexOf("<",position);
+                if (indexOfOpeningTag!=-1) {
+                    if (indexOfOpeningTag!=position)
+                        result.append(s.substring(position, indexOfOpeningTag));
+                    position=indexOfOpeningTag+1;
+                } else {
+                    result.append(s.substring(position, s.length()));
+                    position=s.length();
+                }
+                int indexOfClosingTag=s.indexOf(">",position);
+                if (indexOfClosingTag!=-1) {
+                    position= indexOfClosingTag +1;
+                } else {
+                    result.append(s.substring(position, s.length()));
+                    position=s.length();
+                }
+            }
+        }
+        return StringUtils.replace(result.toString(), "&nbsp;"," ");
+    }
+    
+    /**
+     * Returns the value stripped from HTML tags if <b>escapeHTML</b> is false.
+     * This makes sense because it is not terribly useful to have half-finished tags in your code.
+     * Note that the "length" of the resulting string is not very exact.
+     * FIXME: we could remove extra whitespace and character entities here
+     * @return value stripped from tags.
+     */
+    public static String strippedValue(String value, int length) {
+        if(value == null || value.length() < 1)
+            return null;
+        StringTokenizer tokenizer = new StringTokenizer(value, "<", false);
+        int token = value.charAt(0) == '<' ? 0 : 1;
+        String nextPart = null;
+        StringBuffer result = new StringBuffer();
+        int currentLength = result.length();
+        while (tokenizer.hasMoreTokens() && currentLength < length && currentLength < value.length()) {
+            if(token == 0)
+                nextPart = tokenizer.nextToken(">");
+            else {
+                nextPart = tokenizer.nextToken("<");
+                if(nextPart.length() > 0  && nextPart.charAt(0) == '>')
+                    nextPart = nextPart.substring(1);
+            }
+            if (nextPart != null && token != 0) {
+                result.append(nextPart);
+                currentLength += nextPart.length();
+            }
+            token = 1 - token;
+        }
+        return result.toString();
+    }
+	
 	/**
 	 * @deprecated use {@link #stripHtml(String, boolean)}
 	 */
@@ -2669,4 +2772,38 @@ public class ERXStringUtilities {
 		return retStr.toString();
 	}
 
+    /**
+     * Given an initial string and an array of substrings, 
+     * Removes any occurrences of any of the substrings
+     * from the initial string. Used in conjunction with
+     * fuzzy matching.
+     * @param newString initial string from which to remove other strings
+     * @param toBeCleaneds array of substrings to be removed from the initial string.
+     * @return cleaned string.
+     */
+    // FIXME: Should use a StringBuffer instead of creating strings all over the place.
+    public static String cleanString(String newString, NSArray<String> toBeCleaneds) {
+        String result=newString;
+        if (newString!=null) {
+            for(Enumeration e = toBeCleaneds.objectEnumerator(); e.hasMoreElements();){
+                String toBeCleaned = (String)e.nextElement();
+                if(newString.toUpperCase().indexOf(toBeCleaned)>-1){
+                    result=newString.substring(0, newString.toUpperCase().indexOf(toBeCleaned));
+                }
+            }
+        }
+        return result;
+    }
+	
+	public static boolean isBlank(String value) {
+		boolean isBlank = false;
+		if (value == null || value.trim().length() == 0) {
+			isBlank = true;
+		}
+		return isBlank;
+	}
+	
+	public static boolean isNotBlank(String value) {
+		return ! isBlank(value);
+	}
 }
