@@ -223,13 +223,17 @@ public class EGSimpleTableCreator {
 		Object value = null;
 		switch(cellType) {
 			case HSSFCell.CELL_TYPE_NUMERIC:
-			value = new Double(cell.getNumericCellValue());
+			value = Double.valueOf(cell.getNumericCellValue());
 			break;
 			
 			case HSSFCell.CELL_TYPE_FORMULA:
 			value = cell.getCellFormula();
 			break;
-
+			
+			case HSSFCell.CELL_TYPE_BOOLEAN:
+			value = cell.getBooleanCellValue();
+			break;
+			
 			default:
 			value = cell.getStringCellValue();
 			break;
